--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "npm run build:ssr",
+    "build:functions": "npm run --prefix functions build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "compile:server": "webpack --config webpack.server.config.js --progress --colors",
-    "serve:ssr": "node dist/server",
-    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
+    "serve:ssr": "firebase serve",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server && npm run build:functions",
     "build:client-and-server-bundles": "ng build --prod && ng run angularpwassrseofbref:server:production --bundleDependencies all"
   },
   "private": true,
@@ -19,6 +20,7 @@
     "@angular/common": "~8.1.0",
     "@angular/compiler": "~8.1.0",
     "@angular/core": "~8.1.0",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.1.0",
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
@@ -28,9 +30,14 @@
     "@angular/service-worker": "~8.1.0",
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "bufferutil": "^4.0.1",
     "express": "^4.15.2",
+    "firebase": "^6.2.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "utf-8-validate": "^5.0.2",
+    "ws": "^7.0.1",
+    "xhr2": "^0.2.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
